--- a/docs/post/2018-01-13_stancon-highlights.Rmd
+++ b/docs/post/2018-01-13_stancon-highlights.Rmd
@@ -6,11 +6,11 @@ date: 2018-01-19
 
 Hi readers,
 
-Last Friday, StanCon 2018 Ansilomar wrapped up. I have a little time
+Recently I got back from StanCon 2018 Ansilomar. I had a little time
 waiting for one of my flights and I thought I'd reflect on the conference.
 Last year I was lucky enough to go to the first StanCon and it was nice
 to be able to see how the conference has grown. This year it was three
-days of tutorials, talks, and networking and I had a blast.
+days of tutorials, talks, and networking. I had a blast.
 
 Here are some of my personal highlights, I'll update with
 links to the slides/videos as they become available.
@@ -59,7 +59,7 @@ with the fact that the true future distribution is unknown:
 
 1. $\mathit{M}_{open}$ - The normal approach of using the leave-one-out
 distribution as an approximation for the future
-2. $\mathit{M}_{closed}$ - He didn't cover this one
+2. $\mathit{M}_{closed}$ - This one wasn't covered in detail.
 3. $\mathit{M}_{completed}$ - Using a trusted distribution to approximate the
 future.
 
@@ -103,7 +103,7 @@ sampling, because it is akin to leaving one cluster (group) out at a time.
 
 Sam Brilleman gave a really cool talk on using coupled models for predicting
 time to events. For example using the trajectory of a biomarker to predict
-and adverse health event. By sharing parameters between the two models
+an adverse health event. By sharing parameters between the two models
 (proportional hazards for the event, hierarchical model for biomarkers)
 you share information between the two data types. In collaboration with
 Ben Goodrich this is now easy in rstanarm. Very cool.
