Add tags for findPeaks post

--- a/content/post/2018-02-08_peaks-intro.Rmd
+++ b/content/post/2018-02-08_peaks-intro.Rmd
@@ -3,6 +3,7 @@ title: "Finding and playing with peaks in RMINC"
 output: html_document
 author: Jason Lerch
 date: 2018-02-09
+tags: ["RMINC", "R", "neuroimaging", "MRI"]
 ---
 
 So, peaks. When producing a statistical map, it's good to get a report of the peaks (i.e. most significant findings). RMINC has had this support for a while now, though it has remained somewhat hidden. Here's a bit of an intro, then.
